2002-04-26  Paolo Carlini  <pcarlini@unitus.it>

	* include/bits/basic_string.h (replace(__pos, __n1, __s, __n2):
	Fix and tighten __throw_length_error check.
	* testsuite/21_strings/replace.cc (test05): New.
	* testsuite/21_strings/replace.cc (test02, test03, test04): Tweak.

2002-04-23  Loren J. Rittle <ljrittle@acm.org>

	* include/std/std_fstream.h (basic_filebuf::sync): Hoist
	unconditional flush on lower-layer handle to here...
	* include/bits/fstream.tcc (basic_filebuf::_M_really_overflow):
	...from here.  Optimize remaining _M_file.sync() call pattern.
	* testsuite/27_io/narrow_stream_objects.cc (test04): New test.
	(test05): Likewise.

2002-04-23  Jason Merrill  <jason@redhat.com>

	* include/bits/fstream.tcc (basic_filebuf::seekoff): Fix for
	output-only filebufs.
	* include/std/std_fstream.h (basic_filebuf::_M_set_indeterminate):
	Likewise.
	(basic_filebuf::_M_set_determinate): Likewise.

	PR libstdc++/6414
	* include/bits/fstream.tcc (basic_filebuf::seekoff): Adjust return
	value properly in the trivial case.
	* testsuite/27_io/istream_seeks.cc (test04): Make sure that
	tellg() returns the right value after a read.

2002-04-23  Hans-Peter Nilsson  <hp@bitrange.com>

	* config/cpu/mmix/bits/cpu_limits.h: New file.
	* configure.target (CPULIMITSH): Use it.

2002-04-22  Loren J. Rittle <ljrittle@acm.org>

	* docs/html/17_intro/porting.texi (_GLIBCPP_AVOID_FSEEK): Remove.
	* docs/html/17_intro/porting.html: Rebuilt.

2002-04-20  Jason Merrill  <jason@redhat.com>

	PR libstdc++/4150
	* include/std/std_streambuf.h (basic_streambuf::_M_set_indeterminate): 
	Move to filebuf.
	(basic_streambuf::_M_set_determinate): Likewise.
	(basic_streambuf::_M_is_indeterminate): Likewise.
	* include/bits/std_fstream.h (basic_filebuf::_M_filepos): New 
	non-static data member.
	(basic_filebuf::_M_underflow_common): New non-static member function.
	(basic_filebuf::_M_underflow, _M_uflow): Call it.
	(basic_filebuf::sync): Avoid useless seeking.