@@ -1,6 +1,6 @@
 // Specific definitions for Solaris 2.6  -*- C++ -*-
 
-// Copyright (C) 2000 Free Software Foundation, Inc.
+// Copyright (C) 2000, 2002 Free Software Foundation, Inc.
 //
 // This file is part of the GNU ISO C++ Library.  This library is free
 // software; you can redistribute it and/or modify it under the
@@ -38,8 +38,5 @@
 #define __off_t     off_t
 #define __off64_t   off64_t
 #define __ssize_t   ssize_t
-
-// Without this all the libio vtbls are offset wrongly.
-#define _G_USING_THUNKS 0
 
 #endif
