@@ -1,6 +1,6 @@
 // Specific definitions for Solaris 7,8  -*- C++ -*-
 
-// Copyright (C) 2000 Free Software Foundation, Inc.
+// Copyright (C) 2000, 2002 Free Software Foundation, Inc.
 //
 // This file is part of the GNU ISO C++ Library.  This library is free
 // software; you can redistribute it and/or modify it under the
@@ -39,11 +39,9 @@
 #define __off64_t   off64_t
 #define __ssize_t   ssize_t
 
-// Without this all the libio vtbls are offset wrongly.
-#define _G_USING_THUNKS 0
-
 #if defined(__sparcv9) || defined(__arch64__)
 #define __glibcpp_long_bits 64
 #endif
 
 #endif
+
